--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
+/* Chrome */
+*::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: gray;
+    border-radius: 5px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(227, 227, 227) ;
+    border-radius: 14px;
+  }
+
 @tailwind components;
 @tailwind utilities;
